Added SEO meta tags

--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Company</title>
+    <title>LiSkyBot Company</title>
+    <meta name="description" content="LiskyBot Company builds smart, modern, and efficient web solutions for the next generation.">
+<meta name="keywords" content="LiskyBot, AI, web development, automation, technology, company">
+<meta name="author" content="LiskyBot Company">
+
+<!-- Open Graph / Social -->
+<meta property="og:title" content="LiskyBot Company">
+<meta property="og:description" content="Smart, modern, and efficient web solutions by LiskyBot Company.">
+<meta property="og:image" content="https://liskybot-company.netlify.app/images/preview.png">
+<meta property="og:url" content="https://liskybot-company.netlify.app">
+<meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <!-- AOS Animation Library -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<link rel="icon" type="image/png" href="assets/logos/logo.png">
+
 
 </head>
 <body>
