Updated the files

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 
     <div class="footer-socials">
       <h4>Follow Us</h4>
-      <a href="#"><img src="assets/icons/facebook.svg" alt="Facebook"></a>
-      <a href="#"><img src="assets/icons/linkedin.svg" alt="LinkedIn"></a>
-      <a href="#"><img src="assets/icons/github.svg" alt="GitHub"></a>
-    </div>
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+      
   </div>
 
   <div class="footer-bottom">
