--- a/services.html
+++ b/services.html
@@ -11,6 +11,8 @@
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
 <body>
+    <div class="page-wrapper">
+        <div class="content">
     <!-- Navbar -->
     <header>
         <nav class="navbar">
@@ -65,11 +67,15 @@
                 </div>
             </div>
         </div>
+    
     </section>
+        </div>
+    
 
     <footer class="footer">
         <p>&copy; 2025 LiSkyBot. All rights reserved.</p>
     </footer>
+    </div>
 
     <script src="js/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
