--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,10 @@
             </form>
         </div>
     </section>
+    <!-- Footer -->
+     <footer class="footer">
+        <p>&copy; 2025 LiSkyBot. All rights reserved.</p>
+    </footer>
 
     <script src="js/main.js"></script>
     <!-- Success Popup -->
