--- a/projects.html
+++ b/projects.html
@@ -60,6 +60,14 @@
             </div>
         </div>
     </section>
+    <!-- Footer -->
+     <footer>
+  <div class="footer-bottom">
+    &copy; 2025 LiSkyBot Company. All rights reserved.
+  </div>
+</footer>
+
+
 
     <script src="js/main.js"></script>
 </body>
