--- a/team.html
+++ b/team.html
@@ -59,6 +59,12 @@
         </div>
     </section>
 
+    <footer>
+  <div class="footer-bottom">
+    &copy; 2025 LiSkyBot Company. All rights reserved.
+  </div>
+</footer>
+
     <script src="js/main.js"></script>
 </body>
 </html>
