Updated the contact and services html files

--- a/contact.html
+++ b/contact.html
@@ -102,8 +102,7 @@
         </section>
 
         <section class="map-section">
-            <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31913.34444018884!2d37.0055242589882!3d-1.1065162153093902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f4655436638a1%3A0x7372a57c5053e8b!2sJuja!5e0!3m2!1sen!2ske!4v1668543456789!5m2!1sen!2ske" 
+            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d16404.93738332657!2d37.007685722311436!3d-1.0983563550970181!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2ske!4v1761093396472!5m2!1sen!2ske" 
                 width="100%" 
                 height="450" 
                 style="border:0;" 
