--- a/services.html
+++ b/services.html
@@ -21,14 +21,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li class="dropdown">
-                    <a href="services.html" class="active dropbtn">Services</a>
-                    <ul class="dropdown-content">
-                        <li><a href="#web">Web Development</a></li>
-                        <li><a href="#ai">AI Solutions</a></li>
-                        <li><a href="#mobile">Mobile Apps</a></li>
-                    </ul>
-                </li>
+                <li><a href="services.html">Services</a></li>                  
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="team.html">Team</a></li>
                 <li><a href="contact.html">Contact</a></li>
