updated the contact.html file

--- a/contact.html
+++ b/contact.html
@@ -103,13 +103,16 @@
 
         <section class="map-section">
             <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d16404.93738332657!2d37.007685722311436!3d-1.0983563550970181!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2ske!4v1761093396472!5m2!1sen!2ske" 
-                width="100%" 
-                height="450" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy" 
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+            width="600" 
+            height="450" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+
+
+
         </section>
     </main>
 
