--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 
                 <div class="contact-form-container">
                     <h3>Send Us a Message</h3>
-                    <form action="https://formspree.io/f/YOUR_UNIQUE_ID" method="POST">
+                    <form action="https://formspree.io/f/mrbywnzv" method="POST">
                         <div class="form-group">
                             <label for="name">Your Name</label>
                             <input type="text" id="name" name="name" required>
@@ -124,7 +124,7 @@
       </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/main.js" ></script>
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
     <script>
         AOS.init({
