Updated the email

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <strong>Email Us</strong>
-                            <p>info@liskybot.com</p>
+                            <p>liskybot.tech@outlook.com</p>
                         </div>
                     </div>
                     <div class="info-block">
