Update the team members

--- a/team.html
+++ b/team.html
@@ -59,10 +59,10 @@
                 <h2>Meet Our Experts</h2>
                 <div class="team-grid">
                     <div class="expert-card" data-aos="fade-up" data-aos-delay="100">
-                        <img src="assets/images/team2.jpg" alt="Nice Bliss">
-                        <h3>Nice Bliss</h3>
+                        <img src="assets/images/team2.jpg" alt="Clerice Bliss">
+                        <h3>Clerice Bliss</h3>
                         <p class="role">Lead Developer</p>
-                        <p class="bio">With over a decade of experience, Nice is the architectural mastermind behind our most complex projects.</p>
+                        <p class="bio">With over a decade of experience, Clerice is the architectural mastermind behind our most complex projects.</p>
                         <div class="social-links">
                             <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                             <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
@@ -70,10 +70,10 @@
                     </div>
 
                     <div class="expert-card" data-aos="fade-up" data-aos-delay="200">
-                        <img src="assets/images/team3.jpg" alt="Henry Harrisson">
-                        <h3>Henry Harrisson</h3>
+                        <img src="assets/images/team3.jpg" alt="Martin Kagiri">
+                        <h3>Martin Kagiri</h3>
                         <p class="role">AI Specialist</p>
-                        <p class="bio">Henry lives on the cutting edge of machine learning, turning complex data into actionable, intelligent solutions.</p>
+                        <p class="bio">Martin lives on the cutting edge of machine learning, turning complex data into actionable, intelligent solutions.</p>
                         <div class="social-links">
                             <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                             <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
@@ -81,10 +81,10 @@
                     </div>
 
                     <div class="expert-card" data-aos="fade-up" data-aos-delay="300">
-                        <img src="assets/images/team4.jpg" alt="Grace Ashton">
-                        <h3>Grace Ashton</h3>
+                        <img src="assets/images/team4.jpg" alt="Evans Odhiambo">
+                        <h3>Evans Odhiambo</h3>
                         <p class="role">UI/UX Designer</p>
-                        <p class="bio">Grace is the creative heart of our team, dedicated to crafting beautiful, intuitive, and user-friendly experiences.</p>
+                        <p class="bio">Evans is the creative heart of our team, dedicated to crafting beautiful, intuitive, and user-friendly experiences.</p>
                         <div class="social-links">
                             <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                             <a href="#" aria-label="Dribbble"><i class="fab fa-dribbble"></i></a>
