update some features in te files

--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="assets/logos/logo.png" alt="LiSkyBot Logo">
+                    <a href="index.html">
+                <img src="assets/logos/logo.png" alt="LiSkyBot Logo"></a>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -123,9 +124,9 @@
         </div>
         <div class="footer-socials">
             <h4>Follow Us</h4>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=61582498392747"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://twitter.com/liskybotcompany"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/liskybot?igsh=NXByMzdmMDBnZmVp"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
     <div class="footer-bottom">
