--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,8 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="assets/logos/logo.png" alt="LiSkyBot Logo">
+                <a href="index.html">
+                <img src="assets/logos/logo.png" alt="LiSkyBot Logo"></a>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -72,7 +73,7 @@
 
                 <div class="contact-form-container">
                     <h3>Send Us a Message</h3>
-                    <form action="https://formspree.io/f/mrbywnzv" method="POST">
+                    <form action="https://formspree.io/f/xovyeyzg" method="POST">
                         <div class="form-group">
                             <label for="name">Your Name</label>
                             <input type="text" id="name" name="name" required>
