--- a/team.html
+++ b/team.html
@@ -15,7 +15,8 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="assets/logos/logo.png" alt="LiSkyBot Logo">
+                <a href="index.html">
+                <img src="assets/logos/logo.png" alt="LiSkyBot Logo"></a>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
