Updated Liskybot to use Cloud Server

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
 <script>
   // *** PASTE YOUR NGROK LINK HERE ***
-  const API_URL = "https://kickless-bernarda-lushier.ngrok-free.dev/chat"; 
+  const API_URL = "https://smart-lisky-chatbot.onrender.com/chat"; 
                    
 
   function toggleChat() {
