Updated the file for SEO purposes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LiSkyBot - AI & Software Solutions for Kenyan Businesses</title>
-    <meta name="description" content="LiSkyBot builds intelligent AI automation and custom software solutions to help Kenyan businesses streamline operations, save costs, and drive growth.">
+    <link rel="canonical" href="https://liskybot.co.ke/" />
+    <meta name="description" content="LiSkyBot builds intelligent AI automation and custom software solutions to help businesses streamline operations, save costs, and drive growth.">
     <meta name="keywords" content="LiSkyBot, AI, software development, automation, cloud solutions, Kenya, Nairobi">
     <meta name="author" content="LiSkyBot">
 
