--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Services - LiSkyBot</title>
+    <link rel="canonical" href="https://liskybot.co.ke/services.html" />
     <meta name="description" content="Explore our expert services in AI & Automation, Custom Web Development, and Mobile App Creation to elevate your business.">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
