--- a/team.html
+++ b/team.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Team - LiSkyBot</title>
+    <link rel="canonical" href="https://liskybot.co.ke/team.html" />
     <meta name="description" content="Meet the passionate team of developers, designers, and AI specialists at LiSkyBot.">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
