--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About LiSkyBot - Our Story & Values</title>
+    <link rel="canonical" href="https://liskybot.co.ke/about.html" />
     <meta name="description" content="Learn about LiSkyBot's mission to empower Kenyan businesses through innovative AI and software solutions.">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
