--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - LiSkyBot</title>
+    <link rel="canonical" href="https://liskybot.co.ke/contact.html" />
     <meta name="description" content="Get in touch with the LiSkyBot team to discuss your project. We're based in Juja, Kenya.">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
