--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Projects - LiSkyBot</title>
+    <link rel="canonical" href="https://liskybot.co.ke/projects.html" />
     <meta name="description" content="See a selection of our successful projects in AI, IoT, and custom web development.">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
